--- a/FansWebT/Components/Pages/Home.razor
+++ b/FansWebT/Components/Pages/Home.razor
@@ -5,7 +5,7 @@
 <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
     <MudImage Src="images/HikiBackGround1.png" Class="page-background-container" Fluid="true" />
     <MudStack AlignItems="AlignItems.Center">
-        <MudStack AlignItems="AlignItems.Center" Spacing="2" Class="mb-16">
+        <MudStack AlignItems="AlignItems.Center" Spacing="2" Class="mb-14">
             <MudItem>
                 <MudAvatar Size="Size.Large">
                     <MudImage Src="images/HikiIcon0.jpg" ObjectFit="ObjectFit.Cover"></MudImage>
@@ -21,12 +21,16 @@
                     <MudImage Src="images/塔.jpg" ObjectFit="ObjectFit.Cover" Class="custom-image"></MudImage>
                 </MudLink>
             </MudItem>
-            <MudItem xs="12" sm="6" md="4">
-                <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
+@*             <MudItem xs="12" sm="6" md="4">
+                <MudLink Href="@TowerLink" Target="_blank">
+                    <MudImage Src="images/round2.jpg" ObjectFit="ObjectFit.Cover" Class="custom-image"></MudImage>
+                </MudLink>
             </MudItem>
             <MudItem xs="12" sm="12" md="4">
-                <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
-            </MudItem>
+                <MudLink Href="@TowerLink" Target="_blank">
+                    <MudImage Src="images/三笠.jpg" ObjectFit="ObjectFit.Cover" Class="custom-image"></MudImage>
+                </MudLink>
+            </MudItem> *@
 @*             <MudItem xs="12" sm="6">
                 <MudGrid>
                     <MudItem xs="12">
