--- a/FansWebT/wwwroot/css/custom.css
+++ b/FansWebT/wwwroot/css/custom.css
@@ -20,8 +20,8 @@
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    width: 100%;
-    height: 100vh;
+    height: 100%;
+    object-fit: cover;
     position: fixed;
     top: 0;
     left: 0;
