--- a/FansWebT/Components/Pages/Home.razor
+++ b/FansWebT/Components/Pages/Home.razor
@@ -3,7 +3,7 @@
 <PageTitle>Home</PageTitle>
 
 <MudContainer Class="mt-16 px-8" MaxWidth="MaxWidth.False">
-    <MudImage Src="images/HikiBackGround1.png" Class="page-background-container" Fluid="true" />
+    
     <MudStack AlignItems="AlignItems.Center">
         <MudStack AlignItems="AlignItems.Center" Spacing="2" Class="mb-14">
             <MudItem>
@@ -31,7 +31,7 @@
                     <MudImage Src="images/三笠.jpg" ObjectFit="ObjectFit.Cover" Class="custom-image"></MudImage>
                 </MudLink>
             </MudItem> *@
-@*             <MudItem xs="12" sm="6">
+            <MudItem xs="12" sm="6">
                 <MudGrid>
                     <MudItem xs="12">
                         <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
@@ -52,7 +52,7 @@
             </MudItem>
             <MudItem xs="12" sm="12" md="4">
                 <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;"></MudPaper>
-            </MudItem> *@
+            </MudItem>
         </MudGrid>
     </MudStack>
 </MudContainer>
