--- a/FansWebT/wwwroot/css/custom.css
+++ b/FansWebT/wwwroot/css/custom.css
@@ -21,6 +21,7 @@
     background-attachment: fixed;
     background-position: center;
     height: 100%;
+    width: 100vw;
     object-fit: cover;
     position: fixed;
     top: 0;
