--- a/FansWebT/wwwroot/css/custom.css
+++ b/FansWebT/wwwroot/css/custom.css
@@ -1,11 +1,30 @@
 ﻿/* custom.css */
 
 
+
 .custom-image {
     max-width: 100%;
     height: auto;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+.gif-image {
+    max-width: 100%;
+    height: auto;
+}
+.tab-midset{
+    display:grid;
+    grid-template-columns:1fr 5fr 1fr;
+}
+
+
+.custom-navlink {
+    font-family: 'Comic Neue';
+    font-size: 18px; /* 自定义字体大小 */
+}
+
+.tab-font {
+    font-family: 'Comic Neue', sans-serif !important;
 }
 .background-image {
     position: absolute;
@@ -15,6 +34,18 @@
     height: 100%;
     object-fit: cover;
     z-index: -1;
+}
+
+.frosted-glass {
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.2); /* 半透明效果 */
+    opacity: 1; /* 整体半透明 */
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 .page-background-container {
     background-size: cover;
@@ -28,16 +59,53 @@
     left: 0;
     z-index: -1;
 }
-
-.frosted-glass {
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    background-color: rgba(255, 255, 255, 0.2); /* 调整透明度 */
-    opacity: 1; /* 设置整体半透明 */
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
+.content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
 }
+
+.flex-container {
+    display: flex;
+    justify-content: center; /* 居中对齐 */
+}
+
+.left, .right {
+    flex: 1; /* 左右部分各占1份 */
+}
+
+.center {
+    flex: 8; /* 中间部分占5份 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.appbar-content {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 15%; /* 留出左右空白区域 */
+    width: 70%; /* 中间内容占用60%的宽度 */
+}
+
+/* custom.css */
+.navlink-container {
+    display: flex;
+    justify-content: center; /* 水平居中 */
+    align-items: center; /* 垂直居中 */
+    border-radius: 8px;
+    /*height: 100%;*/ /* 确保高度 */
+    /*width: 100%;*/ /* 确保宽度 */
+}
+
+    .navlink-container:hover {
+        background-color: #f0f0f0; /* 鼠标悬浮样式 */
+    }
+
+    .navlink-container.selected {
+        background-color: #d0d0d0; /* 选中样式 */
+        font-weight: bold; /* 选中样式字体加粗 */
+    }
+
 
