--- a/FansWebT/Components/App.razor
+++ b/FansWebT/Components/App.razor
@@ -8,6 +8,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Comic+Neue:wght@400;700&family=Lobster&family=Caveat:wght@400;700&family=Indie+Flower&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="css/custom.css" rel="stylesheet" />
+    <link href="css/welcome.css" rel="stylesheet" />
+    <link href="css/typewriter.css" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />  
     <link rel="icon" type="image/ico" href="favicon.ico" />
     <HeadOutlet @rendermode="InteractiveServer" />
